tests/errors/attribute-derive-partial-ord-enum.ari
@derive(PartialOrd)
enum Mode {
  Slow,
  Fast,
}

fn main() -> i64 {
  return 0;
}
